--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-/log/
-/postman
-/postman.exe
-/postman.db/
-/serve_files/
-/postman.lock
+/cmd/postman/log/
+/cmd/postman/postman
+/cmd/postman/postman.exe
+/cmd/postman/postman.db/
+/cmd/postman/serve_files/
+/cmd/postman/postman.lock
